src/main/webapp/style.css
/* ... */
.preview {
  background: #FFF8E1;
}

.col-1 {
  width: 8.33%;
}

.col-2 {
  width: 16.66%;
}

.col-3 {
  width: 25%;
}

.col-4 {
  width: 33.33%;
}

.col-5 {
  width: 41.66%;
}

.col-6 {
  width: 50%;
}

.col-7 {
  width: 58.33%;
}

.col-8 {
  width: 66.66%;
}

.col-9 {
  width: 75%;
}

.col-10 {
  width: 83.33%;
}

.col-11 {
  width: 91.66%;
}

.col-12 {
  width: 100%;
}

[class*="col-"] {
  float: left;
  padding: 15px;
  /* border: 1px solid red; */
}

[class*="col-"].header {
  padding-bottom: 0;
}

[class*="col-"].subheader {
  padding-top: 0;
}

[class*="col-"].footer {
  padding-top: 0;
}

.home-footer {
  font-size: 0.9em;
  color: #666;
  margin-top: 1.5em;
  padding-top: 0.5em;
}

.home-footer a {
  color: #666;
}

.home-footer a:hover {
  color: #333;
}

[class*="col-"].header h1, [class*="col-"].header h2, [class*="col-"].header h3 {
  margin-bottom: 0;
}

.columncontainer {
  display: flex;
  column-gap: 60px;
  row-gap: 15px;
  flex-direction: row;
  flex-wrap: wrap;
}

.columnelement {
  width: 45%;
}

html {
  height: 100%;
  text-size-adjust: none;
}

body {
  color: #222;
  font-family: Inter, Verdana, Helvetica, sans-serif;
  font-size: 12pt;
  margin: 0;
  height: 100%;
  min-width: 1420px;
}

h1, h2, h3, h4, h5, h6 {
  color: black;
  background-color: inherit;
  clear: both;
  font-family: Martian, monaco, monospace;
  font-weight: bold;
  margin-top: 5mm;
}

h1, h2 {
  margin-bottom: 5mm;
}

h4, h5, h6 {
  font-size: 12pt;
}

h5, h6 {
  font-style: italic;
  margin-bottom: 2mm;
}

p.subtitle {
  margin-bottom: 24px;
  font-family: Martian, monaco, monospace;
  font-style: italic;
  font-size: 10pt;
}

p.center {
  text-align: center;
}

.title .logo {
  display: inline-block;
  background-image: url("images/logo.svg?v=4.12.1");
  width: 46mm;
  height: 12mm;
  vertical-align: middle;
}

.title .orglogo {
  display: inline-block;
  background-image: url("images/by-kpxl.svg");
  width: 21.72mm;
  height: 6mm;
  vertical-align: middle;
}

.menu {
  display: inline-block;
  font-size: 17px;
  margin-left: 40px;
  font-family: Martian, monaco, monospace;
  vertical-align: middle;
}

.menu a {
  display: inline-block;
  padding: 12px 16px;
  color: #1A1F23;
  opacity: 0.6;
  font-weight: 700;
}

.menu .selected a {
  display: inline-block;
  padding: 12px 16px 9px 16px;
  border-bottom: 3px solid #0b73da;
  color: #1A1F23;
  opacity: 1;
  font-weight: 700;
}

.menu a:hover {
  color: #1A1F23;
  opacity: 1;
}

.menu a:active {
  color: #1A1F23;
  opacity: 1;
}

section {
  display: block;
  margin: 0 auto;
}

@media screen and (min-width: 576px) {
  section div.container {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-gap: var(--gap);
  }
}

section div.container div.column {
  display: block;
  margin-bottom: calc(2 * var(--gap));
}

@media screen and (min-width: 576px) {
  section div.container div.column {
    margin-bottom: 0;
  }
}

li {
  margin-top: 2mm;
}

table {
  width: 100%;
  font-size: inherit;
  margin-bottom: 30px;
}

div.nanopub-pubinfo td {
  padding: 5px;
}

table, th, td {
  border-collapse: collapse;
}

td, th {
  padding: 5px;
  vertical-align: top;
  text-align: left;
}

th {
  border-bottom: 1px solid #888;
}

tbody tr:nth-child(even) {
  background-color: #efefef;
}

table.activitypanel td {
  background: white;
}

table.activitypanel td.low {
  background: #0B73DA40;
}

table.activitypanel td.med {
  background: #0B73DA80;
}

table.activitypanel td.high {
  background: #0B73DAc0;
}

table.paramtable {
  width: unset;
}

table.paramtable td {
  background: white;
}

div.large-table table {
  max-width: 100%;
}

.box {
  background: #F3F6F9;
  padding: 25px;
  margin-top: 10px;
  margin-bottom: 10px;
  border-radius: 4px;
}

.box.main a {
  font-weight: bold;
}

.box div.option:not(:last-child) {
  margin-bottom: 15px;
}

ul {
  margin-top: 0.5em;
  margin-bottom: 0.5em;
}

ul:has(li) + .emptynotice {
  display: none;
}

.hide-if-empty:has(ul:empty) {
  display: none;
}

.hide-if-empty:has(.hide-if-empty-trigger:empty) {
  display: none;
}

.header.hide-if-empty:not(:has(+ .content.hide-if-empty)) {
  display: none;
}

.emptynotice {
  margin-top: 0;
}

ul:not(:has(li)) {
  display: none;
}

ul.box {
  padding: 25px 25px 25px 40px;
}

.box.odd {
  background: white;
}

ul.box li:not(:last-child) {
  margin-bottom: 15px;
}

img {
  vertical-align: middle;
}

img.thirdparty {
  filter: grayscale(1);
}

.nanopub-icon {
  display: inline-block;
  background-image: url("nanopub-icon.svg");
  vertical-align: top;
  margin-top: 6px;
  width: 12px;
  height: 12px;
}

.user-icon {
  display: inline-block;
  vertical-align: middle;
  margin-top: 0;
  margin-right: 0.3em;
  width: 1.5em;
  background-color: lightgray;
  mask-image: url("images/mask.svg");
  mask-repeat: no-repeat;
  mask-size: contain;
  -webkit-mask-image: url("images/mask.svg");
  -webkit-mask-repeat: no-repeat;
  -webkit-mask-size: contain;
}

.bot-icon {
  display: inline-block;
  vertical-align: middle;
  margin-top: 0;
  margin-right: 0.3em;
  width: 1.5em;
  border: 1px solid lightblue;
  border-radius: 50px;
}

.user-profile-pic {
  display: inline-block;
  margin-top: 0;
  margin-right: 0.3em;
  height: 3em;
  background-color: lightgray;
  mask-image: url("images/mask.svg");
  mask-repeat: no-repeat;
  mask-size: contain;
  -webkit-mask-image: url("images/mask.svg");
  -webkit-mask-repeat: no-repeat;
  -webkit-mask-size: contain;
}

.api-icon {
  display: inline-block;
  background-image: url("images/api-icon.svg");
  vertical-align: top;
  margin-top: 6px;
  width: 12px;
  height: 12px;
}

.textfield-icon {
  margin-left: 10px;
  margin-top: 2px;
}

ul.users {
  list-style: none;
  padding-left: 20.8px;
}

.users ul {
  list-style: none;
  padding-left: 20.8px;
}

.form-icon {
  display: inline-block;
  background-image: url("images/form-icon.svg");
  vertical-align: top;
  margin-top: 6px;
  width: 12px;
  height: 12px;
}
/* ... */

